# RollingRobot-ROS

./: README.md
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/launch/: simple.launch
src/robot_simulation/models/RollingRobot/: Ball.dae  RollingRobot.xacro  Weight.dae  model.config  model.sdf  model.xacro
src/robot_simulation/worlds/: simple.world  simple.xacro
