<?xml version="1.0"?>
<package format="2">
  <name>robot_simulation</name>
  <version>0.0.0</version>
  <description>The robot_simulation package</description>

  <maintainer email="ajahueym@todo.todo">ajahueym</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>

</package>
